--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,7 @@ url                      : https://pifazuoren.github.io #the base hostname & pro
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pifazuoren/pifazuoren.github.io"
 
-# Site Author - The following control what appear as part of the author content on the side bar.
-#               If a field is blank the icon and link will not appear, otherwise it will be shown.
-#               Additional customization can be done by editing /_includes/author-profile.html
+# Site Author 
 author:
   # Biographic information
   avatar           : "TouXiang.png"
