--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ repository               : "pifazuoren.github.io"
 # Site Author 
 author:
   # Biographic information
-  avatar           : "images/TouXiang.png"
+  avatar           : "TouXiang.png"
   name             : "Sun Yi"
   pronouns         : # example: "she/her"  
   bio              : "Student"
