--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
   # Biographic information
   avatar           : "TouXiang.png"
   name             : "Sun Yi"
-  pronouns         : # example: "she/her"  
+  pronouns         : "he/his"  
   bio              : "Student"
   location         : "SH"
   employer         : "SUFE"
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/pifazuoren"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
